# flac-bound

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  appveyor.yml  flac-bound.sublime-project  gh_rsa.enc  ptiong.sublime-project  search-index.js  settings.html  source-files.js
examples/: generate.rs  pipe.rs
flac_bound/: all.html  enum.FlacEncoderInitError.html  enum.FlacEncoderState.html  index.html  sidebar-items.js  struct.FlacEncoder.html  struct.FlacEncoderConfig.html  struct.WriteWrapper.html
flac_sys/: all.html  constant.BIG_ENDIAN.html  constant.BUFSIZ.html  constant.BYTE_ORDER.html  constant.EOF.html  constant.EXIT_FAILURE.html  constant.EXIT_SUCCESS.html  constant.FD_SETSIZE.html  constant.FILENAME_MAX.html  constant.FLAC_API_VERSION_AGE.html  constant.FLAC_API_VERSION_CURRENT.html  constant.FLAC_API_VERSION_REVISION.html  constant.FLAC__ChannelAssignment_FLAC__CHANNEL_ASSIGNMENT_INDEPENDENT.html  constant.FLAC__ChannelAssignment_FLAC__CHANNEL_ASSIGNMENT_LEFT_SIDE.html  constant.FLAC__ChannelAssignment_FLAC__CHANNEL_ASSIGNMENT_MID_SIDE.html  constant.FLAC__ChannelAssignment_FLAC__CHANNEL_ASSIGNMENT_RIGHT_SIDE.html  constant.FLAC__EntropyCodingMethodType_FLAC__ENTROPY_CODING_METHOD_PARTITIONED_RICE.html  constant.FLAC__EntropyCodingMethodType_FLAC__ENTROPY_CODING_METHOD_PARTITIONED_RICE2.html  constant.FLAC__FrameNumberType_FLAC__FRAME_NUMBER_TYPE_FRAME_NUMBER.html  constant.FLAC__FrameNumberType_FLAC__FRAME_NUMBER_TYPE_SAMPLE_NUMBER.html  constant.FLAC__MAX_BITS_PER_SAMPLE.html  constant.FLAC__MAX_BLOCK_SIZE.html  constant.FLAC__MAX_CHANNELS.html  constant.FLAC__MAX_FIXED_ORDER.html  constant.FLAC__MAX_LPC_ORDER.html  constant.FLAC__MAX_METADATA_TYPE_CODE.html  constant.FLAC__MAX_QLP_COEFF_PRECISION.html  constant.FLAC__MAX_RICE_PARTITION_ORDER.html  (+1076 more)
src/: encoder.rs  (+4 more)
(+42 files in other folders)
