[package]
name = "flac-bound"
description = "FLAC encoding via libflac FFI"
documentation = "https://rawcdn.githack.com/nabijaczleweli/flac-bound/doc/flac_bound/index.html"
repository = "https://github.com/nabijaczleweli/flac-bound"
readme = "README.md"
keywords = ["flac", "encoding", "encoder", "encode"]
categories = ["api-bindings"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.2.0"
authors = ["наб <nabijaczleweli@nabijaczleweli.xyz>",
           "Valentin Kahl <git@valentin-kahl.de>"]
exclude = ["*.enc"]

[dependencies.flac-sys]
version = "0.1"
optional = true

[dependencies.libflac-sys]
version = "0.1"
optional = true

[features]
default  = ["flac"]
flac     = ["flac-sys"]
libflac  = ["libflac-sys"]
